assets/css/style.css
/* Fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Syne:wght@400..800&display=swap');

/* Default Overrides */

body{
    margin: 0;
    padding: 0;
    background-color: #fafafa;
    font-family: "Inter", sans-serif;
}

h1,
h2,
h3,
h4 {
    font-family: "Syne",sans-serif;
}


/* Color Override */
.bg-color-navbar {
    background-color: #38E4FF;
}

.bg-color-footer {
    background-color: #38E4FF;
}



/* Buttons */

.btn--color-blue {
    background-color: #165B83;
    color: #fff;
}

.btn--text-white {
    color: #fff;
}



/* Nav */


/* Headers */


/* Page Headers */

.headerWrap {
    text-align: center;
    overflow: hidden;
    margin: 10px;
}

.header {
    font-weight: bold;
    position: relative;
    display: inline-block;
    color: #2876eb;
    position: relative;
}

.header:before {
    content: "";
    position: absolute;
    right: 0;
    top: 100%;
    left: 0vw;
    height: 10px;
    background:
        linear-gradient(#2876eb, #2876eb) top,
        linear-gradient(#2876eb, #2876eb) bottom;
    background-size: 100% 6px, 100% 2px;
    background-repeat: no-repeat;
}


/* Jumbotron */

.jumbotron-container {
    height: 75vh;
    background: url('../images/dustin-humes-gQoYixf4zC8-unsplash.jpg') no-repeat bottom right fixed;
    background-size: cover;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
}

#jumbo-text {
    background-color: rgba(73, 61, 61, 0.452);
    font-size: 130%;
    position: absolute;
    margin: 10px;
    left: 30px;
    top: 30px;
    width: 90%;
    min-height: 200px;
    padding: 30px 10px 30px 10px;
}

#jumbo-text button {
    position: relative;
}

.jumbotron-container h1 {
    color: #fff;
}


.jumbotron-container p {
    color: #fff;
    font-size: 1.4rem;
}




/* Cards */

.card-container {
    margin: 50px 0;
}

.card {
    margin: 2% auto;
    border: 1px solid #000;
    box-shadow: 5px 5px #00000086;
    border-radius: 5px;
}

.card-title {
    font-weight: 600;
    text-decoration: underline;
}



/* Quotes */

.quote {
    display: flex;
    margin-bottom: 10px;
}

.quote img {
    margin-right: 15px;
}

/* Divider */
.block-divider {
    width: 75px;
    height: 5px;
    border: 2px solid #000;
}





.content-container {
    padding-top: 75px;
    padding-bottom: 75px;
}

/* Footer */
#socials {
    padding: 20px 0;
    font-size: 160%;
    display: flex;
    justify-content: space-evenly;
}

#socials i {
    font-size: 150%;
    padding: 2%;
    color: #0E405D;
}






/* Media Queries */

@media screen and (min-width: 0px) {
    
    #jumbo-text{
        width: 100%;
        position: absolute;
        left: 0px;
        top: 0px;
        margin: 0;
    }

    .card{
        font-size: 14px;
        min-width: 250px;
    }

    .card-title {
        font-size: 20px;
        padding-bottom: 5px;
    }
    .card a {
        font-size: 150%;
    }

    .card a i {
        font-size: 150%;
    }
}

@media screen and (min-width: 768px) {
    #jumbo-text{
        width: 60%;
        position: absolute;
        left: 30px;
        top: 30px;
        margin: 10px;
    }

    #jumbo-text h1 {
        font-size: 50px;
        
    }

    .card{
        min-width: 300px;
        font-size: 18px;
        min-width: 268;
    }

    .card-title {
        font-size: 22px;
        padding-bottom: 5px;
    }
    .card a {
        font-size: 150%;
    }

    .card a i {
        font-size: 150%;
    }

}

@media screen and (min-width: 992px) {
    
    .navbar {
        height: 80px;
    }

    .navbar-brand {
        font-size: 24px;
    }

    .navbar-brand img {
        height: 40px;
        width: 40px;
        margin-right: 10px;
    }

    .nav-link {
        font-size: 20px;
    }
    
    #jumbo-text{
        width: 40%;
    }

    .card{
        min-width: 400px;
        max-width: 800px;
        font-size: 22px;
    }

    .card-title {
        font-size: 28px;
        padding-bottom: 5px;
    }

    .card a {
        font-size: 150%;
    }

    .card a i {
        font-size: 150%;
    }

    .quotes {
        justify-content: space-evenly;
    }

}

@media screen and (min-width: 1500px) {
    #jumbo-text{
        width: 30%;
        position: absolute;
        left: 50px;
        top: 50px;
        margin: 10px;
    }

    #jumbo-text h1 {
        font-size: 64px;
        
    }
}

